# discord-message-deleter

./: .example.env  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
