[package]
name = "discord_message_deleter"
version = "0.1.0"
edition = "2021"
authors = ["i358"]
description = "A Rust tool to safely delete Discord messages in bulk"
repository = "https://github.com/i358/discordMessageDeleter"
license = "MIT"
keywords = ["discord", "message", "purge", "prune", "delete", "bulk", "automation"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3" 