[package]
name = "discord_message_deleter"
version = "0.1.0"
edition = "2021"
authors = ["i358"]
description = "A Rust tool to safely delete Discord messages in bulk"
repository = "https://github.com/i358/discord-message-deleter"
license = "MIT"
keywords = ["discord", "message", "delete", "bulk"]
categories = ["command-line-utilities"]

# Optimization settings
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3" 